# copyback

./: .gitignore  .rsync-filter  COPYRIGHT  Makefile.am  README  README.md  configure.ac  maintainer-clean  reconf.sh
doc/: Makefile.orig  copyback.refentry.docbook.xml  db2-common.xsl  db5-to-fo.xsl  get.xslt
help/: .gitignore  Makefile.am  copyback-Development.docbook.xml  copyback-UsersGuide-en.docbook.xml  copyback.refentry.docbook.xml  customization-html.xsl  db2fo-parameters.xsl  db2html-parameters.xsl
prj-doc/: #DEVELOPMENT-BUILD-HOWTO.md#  .#DEVELOPMENT-BUILD-HOWTO.md  DEVELOPMENT-BUILD-HOWTO.md  NOTES-BUGGS.txt  TODO  copyback-bugg.txt  next-version.article.docbook.xml
src/: .gitignore  Makefile.am  constants.sh.in  copyback.sh
test/: Makefile  README  common-directories.m4
test/cb/: Makefile  README
test/cb/autoderived-options/: README
test/cb/autoderived-options/output/: backup-dir-absolute.txt  backup-file-home.txt  list-file-home.txt
test/cb/autoderived-options/scripts/: run-copyback-with-custom-home
test/cb/autoderived-options/testcases/: backup-dir-absolute.m4.simptestcase  backup-file-home.m4.simptestcase  backup-file.m4.simptestcase  backup.m4.simptestcase  common.m4  fail-no-file-nametype.m4.simptestcase  fail-no-file-srctype.m4.simptestcase  fail-program.m4.simptestcase  list-file-home.m4.simptestcase
test/cb/bak-dest/: Makefile
test/cb/bak-dest/abs-arg/: README
test/cb/bak-dest/bak-file/: Makefile  README
test/cb/bak-dest/eac/: Makefile
test/cb/bak-info/output/: all-all-asc.txt  all-all-desc.txt  all-last.txt  bak-all-asc.txt  bak-all-desc.txt  bak-date.txt  bak-nonLast-asc.txt  bak-tag.txt  bakNonLocked-all-asc.txt  bakNonLockedOrW-all-asc.txt
test/cb/bak-info/testcases/: all-all-asc.m4.simptestcase  all-all-desc.m4.simptestcase  all-last.m4.simptestcase  bak-all-asc.m4.simptestcase  (+9 more)
test/cb/find/: Makefile
test/cb/print-backup-file/: README
test/cb/prj-name/: Makefile
test/cb/remove-project/: HAVE_JUST_CREATED_FILES_AND_DIRS
test/cb/update/: Makefile  README
test/common/data/: Makefile
test/common/m4/: check-created-backupname.m4  check-locking.m4  exit-codes.m4
test/common/scripts/: .gitignore  Makefile.am  backup-is-locked.sh  lib-tools.bash  stdin-is-backupname.sh
test/stdin-is-backupname/: README
test/stdin-is-backupname/input/: all_parts-20010203-0405.txt  backupname-20010203+0405.txt  twice-backupname-20010203+0405.txt
test/stdin-is-backupname/testcases/: all_parts-MATCH-2.simptestcase  datetime-MATCH-1.simptestcase  datetime-MATCH-first.simptestcase  datetime-MATCH-last.simptestcase  datetime-MATCH-middle.simptestcase  datetime-MISMATCH-1.simptestcase  datetime-twice-MISMATCH.simptestcase  empty-MISMATCH.simptestcase  no-datetime-MISMATCH.simptestcase
(+295 files in other folders)
